<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/black_shade_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:id="@+id/userReg"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:hint="@string/username"
        android:background="@drawable/button_black"
        app:backgroundTint="@color/light_yellow"
        android:autofillHints=""
        android:inputType="textEmailAddress" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:id="@+id/passReg"
        android:layout_below="@+id/userReg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_black"
        app:backgroundTint="@color/light_yellow"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:autofillHints=""
        android:inputType="textPassword" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_below="@id/passReg"
        android:background="@drawable/button_black"
        app:backgroundTint="@color/yellow"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logPage"
        android:id="@+id/logPage"
        android:layout_below="@id/registerButton"
        android:layout_marginTop="20dp"
        android:textColor="@color/yellow"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="18sp"
        />

</RelativeLayout>