<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:background="@color/black_shade_1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fea"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/yellow"
        />

<androidx.cardview.widget.CardView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:id="@+id/cardIm2T"
    app:cardBackgroundColor="@color/yellow"
    app:cardCornerRadius="12dp"
    android:elevation="15dp"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="33dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i2t"
        android:textSize="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/cardLangTran"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="12dp"
        android:elevation="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="224dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LTran"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/cardQrS"
        app:cardBackgroundColor="@color/yellow"
        android:layout_below="@+id/cardIm2T"
        app:cardCornerRadius="12dp"
        android:elevation="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="33dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/cardFaDet"
        android:layout_below="@+id/cardLangTran"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="12dp"
        android:elevation="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="224dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faceRec"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/cardOcr"
        android:layout_below="@+id/cardQrS"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="12dp"
        android:elevation="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="33dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/cardSome"
        android:layout_below="@+id/cardFaDet"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="12dp"
        android:elevation="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="224dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>